--- a/vpi/Cargo.toml
+++ b/vpi/Cargo.toml
@@ -10,4 +10,6 @@ path = "src/lib.rs"
 
 [dependencies]
 bitflags.workspace = true
+num-derive.workspace = true
+num-traits.workspace = true
 vpi-sys.workspace = true
